# Research-Work

./: README.md  Test_CNN_Andrea_Cicconardi.py  Train_CNN_Andrea_Cicconardi.py  viewer_hypermap.py
Cluster Correlation/: Clustering_analysis.ipynb  Mapping_cluster.py
Generate the protein profile and map the mutations from maveBD/: Blastp.py  Parse_seq_prot.py  analysis_degeneri.py  map-biopython.py  readme.md  stable.py
PL/: Plot_PL.py
Spectrum codes/: Bkg_costant.py
sem_patch_extractor/: Patch_extractor_example.ipynb  README.md  __init__.py  pyproject.toml
sem_patch_extractor/.ipynb_checkpoints/: Patch_extractor_example-checkpoint.ipynb
sem_patch_extractor/sem_patch_extractor/: __init__.py  patches.py
sem_patch_extractor/sem_tools/: __init__.py  sem_patch_extractor.py
