[project]
name = "sem-patch-extractor"
version = "0.1.0"
description = "Extract 1µm × 1µm patches from SEM .tif images"
authors = [{ name = "Andrea Cicconardi", email = "andrea.cicconardi@iit.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pillow",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/andreacicconardi94/Research-Work/tree/main"